--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,12 @@ jobs:
         python-version: '3.8'
 
     - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        echo "::add-path::${HOME}/.local/bin"
+      run: curl -sSL https://install.python-poetry.org | python3 -
+      env:
+        POETRY_HOME: ${{ runner.temp }}/poetry
+      
+    - name: Add Poetry to PATH
+      run: echo "${{ runner.temp }}/poetry/bin" >> $GITHUB_PATH
 
     - name: Install dependencies
       run: poetry install
