--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,3 @@
+# Needed when working with third-party libraries that do not have type annotations
 [mypy]
-ignore_missing_imports = True # Needed when working with third-party libraries that do not have type annotations
+ignore_missing_imports = True
